# generator_otchetov

./: CMakeLists.txt  main.cpp
fish/: WRONG_fish.txt  first_name_last_name.txt  no_fields.txt  otpusk.txt  physical_data.txt  regex_check.txt
fish/otchety/first_name_last_name/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
fish/otchety/otpusk/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
fish/otchety/physical_data/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
include/: fish_go.h  test.h  timer.h
src/: fish_go.cpp  test.cpp  timer.cpp
useful_files/: create_physical_data.txt  regex.txt
